# mmv.c

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  run_tests.yml
src/: main.c  mmv.c  set.c  utils.c
test/: CMakeLists.txt
